<resources>
    <string name="app_name">货运无忧企业端</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_setting">设置</string>
    <string name="button_feedback">反馈</string>
    <string name="button_about">关于</string>
    <string name="menu_location">首页</string>
    <string name="menu_info">公司资料</string>
    <string name="menu_order_list">单量统计</string>
    <string name="menu_order_trace">订单追踪</string>
    <string name="menu_order_query">综合查询</string>
    <string name="menu_motor_locus">轨迹查询</string>
    <string name="menu_contract_users">合约车辆</string>
    <string name="menuOrder">我的派单</string>
    <string name="menuManage">用户管理</string>
    <string name="menuSetting">系统设置</string>
    <string name="menuSwitch">切换公司</string>
    <string name="menuAddcompany">创建公司</string>
    <string name="DetailsGood">太棒了</string>
    <string name="DetailsBed">一般般</string>
    <string name="DetailsCollect">收藏</string>
    <string name="DetailsShare">分享</string>
    <string name="DetailsDiscuss">评论</string>
    <string name="user_center">个人中心</string>
    <string name="user_login_alert">你终于来啦，快登录吧</string>
    <string name="user_key_alert">请输入你的密钥</string>
    <string name="user_bind_btn">绑定</string>
    <string name="user_qr_scan_btn">二维码扫描登陆</string>
    <string name="user_button_alert">登陆后，你可以享有以下功能</string>
    <string name="user_level_alert">社区勋章</string>
    <string name="user_login_another">换一种方式登录</string>
    <string name="user_logout">注销</string>
    <string name="user_title">tule</string>
    <string name="user_cancel">取消</string>
    <string name="user_remember">记住密码</string>
    <string name="user_enter">立即登录</string>
    <string name="user_user_empty">用户名不能为空!</string>
    <string name="user_pwd_empty">密码不能为空!</string>
    <string name="user_login_prompt">请先登录</string>
    <string name="user_login_enter_key">请先请输入密钥</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="press_again_exit">再按一次退出至后台</string>
    <string name="httpError">网络不可用，请检查您的网络连接</string>
    <string name="httpisNull">网络连接超时，请检查您的网络连接</string>
    <string name="httpisTimeOut">网络连接超时</string>
    <string name="user_center_error">请先登录再进入用户中心</string>
    <string name="user_tel">请输入电话号码</string>
    <string name="user_verifycode">请输入验证码</string>
    <string name="user_username">请输入用户名</string>
    <string name="user_pwd">请输入密码</string>
    <string name="user_getcode_error">获取验证码错误!</string>
    <string name="user_login_error">用户名或者密码错误!</string>
    <string name="user_loginKey_error">错误密钥!</string>
    <string name="user_loginInfo_error">网络繁忙，\n请尝试重新登录。</string>
    <string name="about_title">名称:途乐</string>
    <string name="about_intro">[应用简介]\n途乐客户端是一款&#8230;</string>
    <string name="about_story">[应用故事]\n途乐的理念是&#8230;</string>
    <string name="about_tontact">联系我们：</string>
    <string name="about_sina">微博</string>
    <string name="about_weixin">微信</string>
    <string name="tip_loading">奋力加载中&#8230;</string>
    <string name="detail_prompt">写评论</string>
    <string name="detail_enter">发表</string>
    <string name="discuss_succeed">发表成功</string>
    <string name="discuss_fail">发表失败</string>
    <string name="query_prompt">请输入关键字</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_input_content">请输入您的反馈意见</string>
    <string name="feedback_back">返回</string>
    <string name="user_center_get_info_error">获取信息错误</string>
    <string name="user_center_my_Collect">我的收藏</string>
    <string name="user_center_my_Intro">个人简介</string>
    <string name="user_center_exit">退出功能</string>
    <string name="user_center_e_coin">e币:%s</string>
    <string name="user_center_e_reputation">e望:%s</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <string name="title_search_hint">请输入字符检索</string>
    <string name="add_province">省　份：</string>
    <string name="add_city">城　市：</string>
    <string name="add_street">区　县：</string>
    <string name="get_more">获取更多</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="head">这里是HeadView</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="updating">最近更新：</string>
    <string name="image_url">Image Url</string>
    <string-array name="cmd_array">
        <item>CMD001</item>
        <item>CMD009</item>
        <item>CMD010</item>
        <item>CMD012</item>
        <item>CMD014</item>
    </string-array>
    <string name="old_pwd">当前密码</string>
    <string name="new_pwd">修改密码</string>
    <string name="repeat_pwd">重复密码</string>
    <string name="input_old_pwd">请输入当前密码</string>
    <string name="input_new_pwd">请输入您的新密码</string>
    <string name="input_repeat_pwd">请再次输入您的新密码</string>
    <string name="btn_save">保存</string>
    <string name="logo_msg">© 上丁网络    版权所属</string>
    <string name="being_updated_please_later">正在更新，请稍候</string>
    <string name="downloading_update_please_later_ellipsis">正在下载更新,请稍后&#8230;</string>
    <string name="download_fail">下载失败</string>
    <string name="download_success">下载成功</string>
    <string name="confirm_tip">确认提示</string>
    <string name="is_open_gps">是否开启GPS？</string>
    <string name="work_status_changed">工作状态修改成功</string>
    <string name="company_information">公司资料</string>
    <string name="company_name_colon">公司名：</string>
    <string name="contact_colon">联系人：</string>
    <string name="company_introduction_colon">公司介绍：</string>
    <string name="company_address_colon">公司地址：</string>
    <string name="company_logo_colon">公司LOGO：</string>
    <string name="website_colon">网址：</string>
    <string name="enterprise_email_colon">企业邮箱：</string>
    <string name="project_name_colon">项目名称：</string>
    <string name="phone_colon">电话：</string>
    <string name="m">米</string>
    <string name="t"> 吨</string>
    <string name="data_editor_success">资料编辑成功</string>
    <string name="most_choose_num_images">最多选择%d张图片</string>
    <string name="ok">完成</string>
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>
    <string name="update_remind">更新提醒</string>
    <string name="offline_notification">下线通知</string>
    <string name="reLogin">重新登录</string>
    <string name="please_input_you_current_pwd">请输入您的当前密码</string>
    <string name="please_input_you_new_pwd">请输入您的新密码</string>
    <string name="please_again_input_you_new_pwd">请重复输入您的新密码</string>
    <string name="please_input_pwd_length_6">请输入密码长度大于6位的密码</string>
    <string name="please_input_pwd_length_13">请输入密码长度小于13位的密码</string>
    <string name="current_pwd_error">当前密码输入错误</string>
    <string name="two_pwd_no_match_please_enter_again">两次输入的新密码不一致,请重新输入</string>
    <string name="is_save_please_wait_ellipsis">正在保存，请稍候&#8230;</string>
    <string name="pwd_changed_success">密码修改成功</string>
    <string name="confirm_exit_current_account">是否确认退出当前帐号？</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="updated_latest_version">已更新到最新版本</string>
    <string name="exit">退出</string>
    <string name="traffic_statistics">流量统计</string>
    <string name="version_update">版本更新</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="clear_cache">清理缓存</string>
    <string name="change_pwd">修改密码</string>
    <string name="exception_declare">异常申报</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_tip_msg">是否确定要删除当前记录？删除后不可再恢复</string>
    <string name="is_qurey_ellipsis">正在查询&#8230;</string>
    <string name="is_landing_ellipsis">正在登陆&#8230;</string>
    <string name="have_read_and_agreed_to_the_deal">&#060;a href=\&#034;http&#058;//182.18.31.50/HJSERVER\&#034;&#062;已阅读并同意该协议&#060;&#047;a&#062;</string>
    <string name="verification_not_successful">验证未成功</string>
    <string name="validating_user_elipsis">正在验证用户&#8230;</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code_sent_failed">验证码发送未成功</string>
    <string name="verification_code_sent_success_please_check_sms">验证码发送成功，请查看手机短信</string>
    <string name="sending_verification_code_ellipsis">正在发送验证码&#8230;</string>
    <string name="please_input_phone_num">请输入手机号码！</string>
    <string name="phone_number_illegal">电话号码不合法！</string>
    <string name="please_enter_pwd">请输入密码！</string>
    <string name="please_enter_4_15_valid_pwd">请输入4&#8211; 15位有效密码！</string>
    <string name="login_abnormal_please_retry_later">登录出现异常，请稍候重试</string>
    <string name="login_failed_tip_msg">登录未成功，请确认账号和密码后重试</string>
    <string name="logoff_notification">logoff_notification</string>
    <string name="restart_login">重新登录</string>
    <string name="network_busy_please_try_again_later">网络繁忙，请稍后重试</string>
    <string name="network_exception_please_try_again_later">网络异常，请稍后重试</string>
    <string name="please_fill_you_phone_num">请填写您的手机号码！</string>
    <string name="please_input_you_phone_num">请输入您的手机号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="read_agree_agreement">已阅读并同意该协议</string>
    <string name="regist_account">注册帐号</string>
    <string name="find_pwd">找回密码</string>
    <string name="login">登录</string>
    <string name="is_landing">正在登陆&#8230;</string>
    <string name="landing">正在登陆</string>
    <string name="abnormal_declare_success">申报异常成功</string>
    <string name="log_cache_clearup_success">日志缓存清理成功</string>
    <string name="logo_img_unfind">Logo图片未找到</string>
    <string name="team_orientation">车队定位</string>
    <string name="clear">清空</string>
    <string name="set">设置</string>
    <string name="about">关于</string>
    <string name="about_us">关于我们</string>
    <string name="clear_tip">清空提示</string>
    <string name="no_workgroup_tip_msg">没有可以使用的工作组，赶快添加自己的工作组吧</string>
    <string name="switch_groups">切换分组</string>
    <string name="order_tracking">订单追踪</string>
    <string name="phone_num_illegal_cannot_dial">手机号码不合法，不能拨打</string>
    <string name="no_group_msg">没有工作组信息</string>
    <string name="x_time_total_x_num">%1$s (共计%2$d单)</string>
    <string name="x_name_total_x_num">%1$s，共计%2$d单</string>
    <string name="create_time_num_colon">创建时间：</string>
    <string name="order_num_colon">订单号：</string>
    <string name="please_input_order_num">请输入订单号</string>
    <string name="start_time_colon">起始时间：</string>
    <string name="please_select_start_time">请选择起始时间</string>
    <string name="end_time_colon">结束时间：</string>
    <string name="please_select_end_time">请选择结束时间</string>
    <string name="order_type_colon">订单类型：</string>
    <string name="reset">重置</string>
    <string name="query">查询</string>
    <string name="freight_worryfree_use_agreement">货运无忧使用协议</string>
    <string name="reight_worryfree_batch_num">Copyright © 2014&#8211;2019 HUOYUNWUYOU</string>
    <string name="company_name">深圳市上丁网络科技有限公司</string>
    <string name="company_email">公司邮箱：sd@sdbnet.com</string>
    <string name="customer_service_telephone">客服电话：</string>
    <string name="company_net">公司网址：www.sdbnet.com</string>
    <string name="beta">版本:Beta</string>
    <string name="cancel">取消</string>
    <string name="photograph">拍照</string>
    <string name="select_from_album">从相册选择</string>
</resources>