<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <include layout="@layout/common_view_title" />
    <!--
         <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/nav" >

        <ImageView
            android:id="@+id/about_imageview_gohome"
            style="@style/title_right_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_details_gohome" />

        <TextView
            android:id="@+id/textview_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="按条件查询订单"
            android:textColor="#fff"
            android:textSize="15sp" />
    </FrameLayout>
    -->

    <RelativeLayout
        android:id="@+id/header_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/order_num_colon"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_order_id"
                android:layout_width="180dp"
                android:layout_height="fill_parent"
                android:background="@drawable/textbox"
                android:hint="@string/please_input_order_num"
                android:maxLength="10"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/start_time_colon"
                android:textColor="#000000"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/startLayout"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:background="@drawable/textbox"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/startImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="3.0dip"
                    android:src="@drawable/time" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/please_select_start_time"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/end_time_colon"
                android:textColor="#000000"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/endLayout"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:background="@drawable/textbox"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/endImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="3.0dip"
                    android:src="@drawable/time" />

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/please_select_end_time"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/order_type_colon"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/sp_order_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="10.0dip"
                android:layout_weight="1"
                android:background="@drawable/green_btn_selector"
                android:onClick="onReset"
                android:text="@string/reset"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_query"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/back_submit_style"
                android:onClick="onQuery"
                android:text="@string/query"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>