<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@drawable/nav" >

            <ImageView
                android:id="@+id/iv_go_back"
                style="@style/title_right_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/button_details_gohome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_pwd"
                android:textColor="#fff"
                android:textSize="15sp" />
        </FrameLayout>-->
    <include layout="@layout/common_view_title" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/old_pwd"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_old_pwd"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="3"
                    android:background="@drawable/textbox"
                    android:hint="@string/input_old_pwd"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_pwd"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_new_pwd"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="3"
                    android:background="@drawable/textbox"
                    android:hint="@string/input_new_pwd"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repeat_pwd"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_repeat_pwd"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="3"
                    android:background="@drawable/textbox"
                    android:hint="@string/input_repeat_pwd"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_info_save"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginBottom="20.0dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/blue_btn_selector"
                android:text="@string/btn_save"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>